--- a/environment.yml
+++ b/environment.yml
@@ -3,7 +3,7 @@ channels:
   - conda-forge
   - nvidia
 dependencies:
-  - python=3.10
+  - python=3.9
   - cudatoolkit=11.5
   - numpy
   - scipy
@@ -12,6 +12,7 @@ dependencies:
   - jupyterlab
   - ipywidgets
   - tqdm
+  - pyqg
   - git
   - pip
   - pip:
