--- a/environment.yml
+++ b/environment.yml
@@ -1,8 +1,11 @@
 name: closure
 channels:
+  - nvidia
   - conda-forge
 dependencies:
   - python=3.10
+  - cudatoolkit=11.4
+  - nvidia::cuda-nvcc=11.4
   - numpy
   - scipy
   - scikit-learn
