Include additional dependencies in Singularity container.
Kymatio for scattering transform, seaborn for more plotting, xarray
and netcdf4 for more original PyQG dataset handling.

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,14 @@ numpy
 scipy
 scikit-learn
 matplotlib
+seaborn
 jupyterlab
 ipywidgets
 tqdm
 h5py
 diffrax
 distrax
+kymatio
 pyqg
+xarray
+netCDF4
