--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ slurm-*.out
 *.pickle
 *.json
 *.flaxnn
+*.eqx
+*.json
 
 # Ignore IPython notebooks
 *.ipynb
@@ -25,3 +27,9 @@ __pycache__/
 .ipynb_checkpoints/
 !LICENSE.txt
 !requirements.txt
+
+# Ignore analysis outputs
+*.pdf
+*.png
+*.tar.gz
+*.tar
