--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 --find-links=https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
-jax[cuda11_cudnn82]
+jax[cuda11_local]
 flax
 optax
 numpy
