Restrict to older versions of JAX.
This avoids some apparent memory and performance regressions in more
recent version.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 --find-links=https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
-jax[cuda12_local]
+jax[cuda12_local] ==0.4.11
 flax
 optax
 numpy
