--- a/tools/containerbuild/Vagrantfile
+++ b/tools/containerbuild/Vagrantfile
@@ -7,7 +7,7 @@ Vagrant.configure("2") do |config|
   config.vm.synced_folder "../..", "/vagrant"
 
   config.vm.provider "virtualbox" do |lv|
-    lv.memory = "6144"
+    lv.memory = 6144
     lv.cpus = 4
   end
 
