--- a/tools/containerbuild/Vagrantfile
+++ b/tools/containerbuild/Vagrantfile
@@ -2,7 +2,7 @@
 # vi: set ft=ruby :
 
 Vagrant.configure("2") do |config|
-  config.vm.box = "generic/ubuntu2204"
+  config.vm.box = "ubuntu/jammy64"
   config.vm.synced_folder "/scratch", "/host_scratch", :mount_options => ['dmode=774','fmode=775']
   config.vm.synced_folder "../..", "/vagrant"
 
