--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ diffrax
 equinox
 jaxopt
 kymatio
-pyqg
+pyqg @ git+https://github.com/karlotness/pyqg.git@33d93107fcd695e1bcd451f4c268aabd9bf8cee8
 xarray
 netCDF4
 ml-collections
