Install JAX-CFD from Git repository.
It turns out they haven't done a PyPI release in a long time.

--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ jaxtyping
 gcm_filters
 pyqg-jax
 powerpax
-jax-cfd[complete]
+jax-cfd[complete] @ git+https://github.com/google/jax-cfd.git@214b8313f20e8c72d50ff2ff537ff8f0c3190c40
 gin-config
 dm-haiku
 penzai
